# agent-dashboard

./: .gitignore  .npmrc  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  install.sh  package.json  tsconfig.json
.cargo/: config.toml
.claude/memory/: MEMORY.md  codebase-map.md  gotchas.md
.claude/skills/design-system-review/: SKILL.md
.factory/: binding.json
.factory/harness/: prepare.ts
.github/workflows/: ci.yml
config/: agents.yaml  library.yaml  prices.yaml
crates/core/: Cargo.toml
crates/core/src/: bootstrap.rs  bootstrap_scan.rs  bootstrap_session.rs  codex_agent.rs  cross_reference.rs  deduper.rs  detail.rs  domain.rs  drift.rs  duplicate.rs  error.rs  find.rs  flatten.rs  fs_helpers.rs  icloud_check.rs  ignored.rs  import_path.rs  install_paths.rs  install_reconcile.rs  install_state.rs  installer.rs  kind_target.rs  layout.rs  lib.rs  library_drift.rs  library_init.rs  listing.rs  materializer.rs  md_primitive.rs  metadata.rs  overlay_merge.rs  primitive_name.rs  reimport.rs  remote_url.rs  rename.rs  scaffold.rs  scanner.rs  settings.rs  source_backup.rs  url_import.rs  (+5 more)
crates/core/tests/: folder_import.rs  round_trip.rs
crates/git/: Cargo.toml
crates/git/src/: askpass.rs  conflict.rs  file_scan.rs  git_ops.rs  lib.rs  push_gate.rs  runner.rs  secret_scan.rs
crates/prompt-library-bridge/: Cargo.toml
crates/prompt-library-bridge/examples/: seed_fixture_library.rs
crates/prompt-library-bridge/src/: main.rs
crates/secrets/: Cargo.toml
crates/secrets/examples/: keychain_probe.rs
crates/secrets/src/: keychain.rs  lib.rs
docs/: 2026-06-08-multi-agent-observability-command-centre.md  antigravity_token_extractor.py  design-system-contract.md  design-system-migration-partition.md  library-consolidation-track.md
docs/adr/: 0001-typescript-svelte-bun-stack.md  0002-uniform-rack-rate-estimated-cost.md  0003-agent-first-ui-with-drilldowns.md  0004-luminance-token-ramp.md  0005-on-demand-parsed-error-context.md  0006-parsed-transcript-cards-messages-tab.md  0007-prompt-library-rust-command-bridge.md  0008-dashboard-replaces-standalone-app-install-state-ownership.md  0009-flatten-promote-overlay-to-base.md
docs/notes/: 2026-06-10-adversarial-review.md  2026-06-15-skill-library-merge-candidates.md  2026-06-16-bootstrap-overlay-bug.md  2026-06-16-dashboard-ux-safety-gaps.md
docs/phases/: INDEX.md  phase-0-foundation.md  phase-1-claude-code.md  phase-2-codex.md  phase-3-pi.md  phase-4-antigravity.md  phase-5-long-tail.md  phase-6-operations.md
docs/plans/: 2026-06-10-feat-parsed-transcript-cards-messages-tab-plan.md  2026-06-10-refactor-parsed-error-context-view-plan.md  2026-06-11-feat-prompt-library-consolidation-readonly-slice-plan.md  2026-06-11-feat-prompt-library-consolidation-remaining-slices-roadmap-plan.md  2026-06-11-feat-prompt-library-install-drift-slice-plan.md  2026-06-11-feat-prompt-library-working-copy-editor-slice-plan.md  2026-06-12-feat-prompt-library-bootstrap-discovery-wizard-slice-plan.md  2026-06-12-feat-prompt-library-git-remote-sync-slice-plan.md  2026-06-12-feat-prompt-library-lifecycle-slice-plan.md  2026-06-12-feat-prompt-library-metadata-editing-slice-plan.md  2026-06-12-feat-prompt-library-reimport-from-drift-slice-plan.md  2026-06-12-feat-prompt-library-search-slice-plan.md  2026-06-12-feat-prompt-library-target-overlays-slice-plan.md  2026-06-12-feat-prompt-library-url-import-slice-10b-plan.md  2026-06-12-feat-prompt-library-versioning-publishing-slice-plan.md  2026-06-15-feat-burn-output-pairing-tracer-plan.md  2026-06-15-feat-fts5-search-production-grade-plan.md  2026-06-15-feat-fts5-session-search-tracer-bullet-plan.md  2026-06-15-feat-persisted-git-output-rollup-plan.md  2026-06-15-feat-session-git-outcomes-tracer-plan.md  2026-06-15-fix-case-only-install-record-reconciliation-plan.md  2026-06-16-fix-git-outcome-merge-and-branch-correctness-plan.md  2026-06-17-feat-flatten-promote-overlay-to-base-plan.md
docs/sources/: build-your-own-dashboard-guide.html  build-your-own-dashboard-prompt.md
prototype/: NOTES.md  dashboard-prototype.html  serve.ts
scripts/: agents_config.test.ts  agents_config.ts  backfill_git_output.ts  burn.test.ts  burn.ts  cost.ts  db.ts  detect_agents.ts  doctor.ts  error_context.test.ts  error_context.ts  git_output_store.test.ts  git_output_store.ts  library_bridge.test.ts  library_bridge.ts  library_config.test.ts  library_config.ts  library_migration.test.ts  library_migration.ts  library_models.test.ts  library_models.ts  library_routes.test.ts  library_routes.ts  num_range.test.ts  num_range.ts  otel.test.ts  otel.ts  paths.ts  reindex_search.ts  routes.test.ts  routes.ts  server.ts  session_outcomes.test.ts  session_outcomes.ts  session_search.test.ts  session_search.ts  setup_otel.ts  skills.ts  str_truncate.test.ts  str_truncate.ts  (+2 more)
scripts/adapters/: antigravity.test.ts  antigravity.ts  base.ts  claude_code.test.ts  claude_code.ts  codex.test.ts  codex.ts  pi.test.ts  pi.ts
scripts/fixtures/bridge/: README.md  capture.ts  error_marker_missing.json  install_summary.json  kind_info.json  library_status_valid.json  list_installs.json  list_primitives.json  list_working_files.json  primitive_detail_codex_agent.json  primitive_detail_skill.json  read_working_file_binary.json  read_working_file_text.json  scan_drift.json  target_info.json  uninstall_summary.json
templates/launchd/: com.commandcentre.server.plist.template
ui/: .npmrc  bunfig.toml  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/scripts/: check-design-system.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/lib/: api.ts  firehose.svelte.ts  format.test.ts  format.ts  icons.ts  library.test.ts  library.ts  registry.svelte.ts  resource.svelte.test.ts  resource.svelte.ts  router.svelte.test.ts  router.svelte.ts  stores.svelte.ts  transcript.test.ts  transcript.ts
ui/src/lib/components/: BootstrapWizard.svelte  (+14 more)
ui/src/routes/: Activity.svelte  Command.svelte  Library.svelte  Library.svelte.test.ts  LibraryPrototype.svelte  Session.svelte  Session.svelte.test.ts  Skills.svelte
(+79 files in other folders)
