[package]
name = "prompt-library-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "prompt-library-bridge"
path = "src/main.rs"

# m5 invariant, AMENDED by Slice 8 (git remote sync): through Slice 7 + bootstrap
# the bridge was deliberately secrets-free — `prompt-library-secrets` was NOT a
# dependency, so a SecretStore was unconstructible at compile time. Slice 8 is the
# ONE deliberate break (ADR-noted, mirroring how the install slice amended
# ADR-0008): the PAT for git push/pull must live in the macOS Keychain, so the
# secrets crate is now linked. The break is *contained*: a `SecretStore` is
# constructed ONLY by the git-sync commands (configure/PAT/status/push/pull) via
# `secret_store(args)`; every other command path constructs none, and the
# redaction tripwire (D6) guarantees the raw PAT never reaches a log or response.
# core links reqwest transitively. TWO deliberate network-egress paths now exist:
# git-sync push/pull (Slice 8, via the git child process) and url_import fetch
# (Slice 10b, via core's reqwest client — the SSRF allowlist + redirect-disabled
# client live in core::url_import). Every OTHER path stays network-free
# (code-discipline). NEITHER url_import path is secrets-bearing — only git-sync
# constructs a SecretStore.
[dependencies]
prompt-library-core = { path = "../core" }
prompt-library-git = { path = "../git" }
prompt-library-secrets = { path = "../secrets" }
serde = { workspace = true }
serde_json = { workspace = true }
camino = { workspace = true }
# current_thread runtime only — the read path touches std::fs; git status uses
# async process calls through the git crate's TokioProcessRunner. No multi-thread
# worker pool is spun up per one-shot invocation (perf note, Phase 1 insights).
tokio = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
